// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Btn should match snapshot default 1`] = `
<body>
  <div>
    <button
      class="_tadashi_svelte_btn svelte-kcleud"
      type="button"
    />
  </div>
</body>
`;

exports[`Btn should match snapshot props 1`] = `
<body>
  <div>
    <button
      class="_tadashi_svelte_btn customCss svelte-kcleud"
      disabled=""
      type="submit"
    />
  </div>
</body>
`;

exports[`Btn should match snapshot with slot 1`] = `
<body>
  <div>
    <button
      class="_tadashi_svelte_btn xxx svelte-kcleud"
      type="button"
    >
      xxx
    </button>
  </div>
</body>
`;
